--- a/leaderboards_layout.html
+++ b/leaderboards_layout.html
@@ -49,7 +49,7 @@
             </div>
         </nav>
         <div id="leader-container">
-            <div id="row-tabs" class="row">
+            <div class="row">
                 <div class="col s12">
                         <ul class="tabs">
                         <li class="tab col s3"><a class="active" href="#table-1">Table 1</a></li>
