upcoming hacks layout

--- a/upcoming_hacks_layout.html
+++ b/upcoming_hacks_layout.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Rules</title>
+        <title>Upcoming Hacks</title>
         <script src="js/jquery-1.11.3.min.js"></script>
         <script src="js/materialize.min.js"></script>
         <!--Import Google Icon Font-->
@@ -24,53 +24,53 @@
                 </ul>
             </div>
         </nav>
-        <div id="rules-container">
+        <div id="hacks-container">
             <div class="row">
-                <div class="card img-width z-depth-5 col s6">
+                <div class="card hacks-img-width z-depth-5 col s6">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="images/office.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Rule 1<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4">Hack 1<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Rule 1<i class="material-icons right">close</i></span>
+                        <span class="card-title grey-text text-darken-4">Hack 1<i class="material-icons right">close</i></span>
                         <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                 </div>
-                <div class="card img-width z-depth-5 col s6">
+                <div class="card hacks-img-width z-depth-5 col s6">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="images/office.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Rule 2<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4">Hack 2<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Rule 2<i class="material-icons right">close</i></span>
+                        <span class="card-title grey-text text-darken-4">Hack 2<i class="material-icons right">close</i></span>
                         <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                 </div>
-                <div class="card img-width z-depth-5 col s6">
+                <div class="card hacks-img-width z-depth-5 col s6">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="images/office.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Rule 3<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4">Hack 3<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Rule 3<i class="material-icons right">close</i></span>
+                        <span class="card-title grey-text text-darken-4">Hack 3<i class="material-icons right">close</i></span>
                         <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                 </div>
-                <div class="card img-width z-depth-5 col s6">
+                <div class="card hacks-img-width z-depth-5 col s6">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="images/office.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Rule 4<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4">Hack 4<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Rule 4<i class="material-icons right">close</i></span>
+                        <span class="card-title grey-text text-darken-4">Hack 4<i class="material-icons right">close</i></span>
                         <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                 </div>
