added titles to upcoming hacks

--- a/upcoming_hacks_layout.html
+++ b/upcoming_hacks_layout.html
@@ -27,6 +27,7 @@
         <div id="hacks-container">
             <div class="row">
                 <div class="card hacks-img-width z-depth-5 col s6">
+                    <h3 class="header">Title Hack 1</h3>
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="images/office.jpg">
                     </div>
@@ -39,6 +40,7 @@
                     </div>
                 </div>
                 <div class="card hacks-img-width z-depth-5 col s6">
+                    <h3 class="header">Title Hack 2</h3>
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="images/office.jpg">
                     </div>
@@ -51,6 +53,7 @@
                     </div>
                 </div>
                 <div class="card hacks-img-width z-depth-5 col s6">
+                    <h3 class="header">Title Hack 3</h3>
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="images/office.jpg">
                     </div>
@@ -63,6 +66,7 @@
                     </div>
                 </div>
                 <div class="card hacks-img-width z-depth-5 col s6">
+                    <h3 class="header">Title Hack 4</h3>
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="images/office.jpg">
                     </div>
