--- a/upcoming_hacks_layout.html
+++ b/upcoming_hacks_layout.html
@@ -15,7 +15,7 @@
         
         </script>
         <nav>
-            <div class="nav-wrapper">
+            <div class="nav-wrapper nav-colors">
                 <a href="#" class="brand-logo">Logo</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="">Sass</a></li>
