--- a/leaderboards_layout.html
+++ b/leaderboards_layout.html
@@ -40,7 +40,7 @@
         </script>
         <nav>
             <div class="nav-wrapper nav-colors">
-                <a href="#" class="brand-logo">Logo</a>
+                <a class="brand-logo"><img src="images/logo_cpp.png"></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="leaderboards_layout.html">Leaderboards</a></li>
                     <li><a href="upcoming_hacks_layout.html">Hackathons</a></li>
@@ -83,30 +83,31 @@
                 </tbody>
             </table>
         </div>
-        <footer class="page-footer">
-          <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="footer-copyright">
+        <footer id="footer" class="page-footer">
             <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5 class="white-text">Footer Content</h5>
+                        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    </div>
+                    <div id="social-media-container">
+                        <ul>
+                            <li><a class="grey-text text-lighten-3" href="#!"><img src="images/facebook.png"></a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!"><img src="images/g_plus_icon.png"></a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!"><img src="images/instagram.png"></a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!"><img src="images/linkedin.png"></a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!"><img src="images/twitter.png"></a></li>
+                            <li><a class="grey-text text-lighten-3" href="#!"><img src="images/youtube.png"></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-          </div>
+            <div class="footer-copyright">
+                <div class="container">
+                    © 2015 California State Polytechnic University, Pomona
+                    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
