--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Index</title>
         <script src="js/jquery-1.11.3.min.js"></script>
         <script src="js/materialize.min.js"></script>
+        <!--Import Google Icon Font-->
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/materialize.min.css">
         <link rel="stylesheet" type="text/css" href="css/custom.css">
     </head>
