--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
         var names = ['David', 'Jason', 'Dan', 'Thuy', 'Raina', 'Jim', 'Alex', 'Andrew', 'Roberto', 'Jose'];
         var wins = 0;
         var rand = 0;
+        var randRatio = 0;
+        var randGame = 0;
         var division = ['Professional', 'Graduate', 'Undergraduate', 'High School', 'Middle School'];
         var winArr = [];
+        var winRatio = [];
+        var totalGame = [];
         var table1 = [];
         var table2 = [];
         var table3 = [];
@@ -35,19 +39,23 @@
             function appendNSort() {
                 for (a = 0; a < names.length*4; a++) {
                     wins = Math.floor((Math.random() * 100) + 1);
+                    randRatio = (Math.floor(Math.random() * 100) + 1);
+                    randGame = (Math.floor(Math.random() * 100) + 1);
                     rand = Math.floor((Math.random() * 5));
                     if (num == 10) {
                         num = 0;
                     }
                     winArr.push(wins);
+                    winRatio.push(randRatio);
+                    totalGame.push(randGame);
                     if (table1.length != 10) {
-                        table1.push({firstName:names[num], div: division[rand], totalWin: winArr[a]});
+                        table1.push({firstName:names[num], div: division[rand], totalGames: totalGame[a], totalWin: winArr[a], ratio: Math.floor(winRatio[a]/totalGame[a]) * 100 + '%'});
                     } else if (table2.length != 10) {
-                        table2.push({firstName:names[num], div: division[rand], totalWin: winArr[a]});
+                        table2.push({firstName:names[num], div: division[rand], totalGames: totalGame[a], totalWin: winArr[a], ratio: Math.floor(winRatio[a]/totalGame[a]) * 100 + '%'});
                     } else if (table3.length != 10) {
-                        table3.push({firstName:names[num], div: division[rand], totalWin: winArr[a]});
+                        table3.push({firstName:names[num], div: division[rand], totalGames: totalGame[a], totalWin: winArr[a], ratio: Math.floor(winRatio[a]/totalGame[a]) * 100 + '%'});
                     } else if (table4.length != 10) {
-                        table4.push({firstName:names[num], div: division[rand], totalWin: winArr[a]});
+                        table4.push({firstName:names[num], div: division[rand], totalGames: totalGame[a], totalWin: winArr[a], ratio: Math.floor(winRatio[a]/totalGame[a]) * 100 + '%'});
                     }
                     num++;
                 }
@@ -68,25 +76,33 @@
                         $('#table-1:first').append("<tr>");
                         $('tr:last').append("<td>" + count + "</td>");
                         $('tr:last').append("<td>" + table1[i].firstName + "</td>");
+                        $('tr:last').append("<td>" + table1[i].totalGames + "</td>");
                         $('tr:last').append("<td>" + table1[i].totalWin + "</td>");
+                        $('tr:last').append("<td>" + table1[i].ratio + "</td>");
                         $('tr:last').append("<td>" + table1[i].div + "</td>");
                     } else if (tableNum == 2) {
                         $('#table-2:first').append("<tr>");
                         $('tr:last').append("<td>" + count + "</td>");
                         $('tr:last').append("<td>" + table2[i].firstName + "</td>");
+                        $('tr:last').append("<td>" + table1[i].totalGames + "</td>");
                         $('tr:last').append("<td>" + table2[i].totalWin + "</td>");
+                        $('tr:last').append("<td>" + table1[i].ratio + "</td>");
                         $('tr:last').append("<td>" + table2[i].div + "</td>");
                     } else if (tableNum == 3) {
                         $('#table-3:first').append("<tr>");
                         $('tr:last').append("<td>" + count + "</td>");
                         $('tr:last').append("<td>" + table3[i].firstName + "</td>");
+                        $('tr:last').append("<td>" + table1[i].totalGames + "</td>");
                         $('tr:last').append("<td>" + table3[i].totalWin + "</td>");
+                        $('tr:last').append("<td>" + table1[i].ratio + "</td>");
                         $('tr:last').append("<td>" + table3[i].div + "</td>");
                     } else {
                         $('#table-4:first').append("<tr>");
                         $('tr:last').append("<td>" + count + "</td>");
                         $('tr:last').append("<td>" + table4[i].firstName + "</td>");
+                        $('tr:last').append("<td>" + table1[i].totalGames + "</td>");
                         $('tr:last').append("<td>" + table4[i].totalWin + "</td>");
+                        $('tr:last').append("<td>" + table1[i].ratio + "</td>");
                         $('tr:last').append("<td>" + table4[i].div + "</td>");
                     }
                     count++;
@@ -146,12 +162,11 @@
         </nav>
         <nav>
             <div class="nav-wrapper">
-                <form>
-                    <div class="input-field">
-                        <input type="text" id="search" type="search" required>
-                        <label for="search"><i class="material-icons">search</i></label>
-                    </div>
-                </form>
+                
+                <div class="input-field">
+                    <input type="text" id="search" type="search" placeholder="Type to search.." required>
+                    <label for="search"><i class="material-icons">search</i></label>
+                </div>
             </div>
         </nav>
         <div id="leader-container">
@@ -170,8 +185,10 @@
                 <tr>
                     <th data-field="number"></th>
                     <th data-field="id">Name</th>
+                    <th data-field="total">Total Games</th>
                     <th data-field="name">Wins</th>
-                    <th data-field="price">Division</th>
+                    <th data-field="ratio">Win Ratio</th>
+                    <th data-field="division">Division</th>
                 </tr>
                 </thead>
 
