--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
                     {firstName:"Poop", lastName:"Doe", age:3}, {firstName:"Slut", lastName:"Doe", age:6}];
             $( document ).ready(function() {
                 var $rows = $('#table tr');
-                console.log($rows);
+                console.log((Math.floor(Math.random() * 0.9) + 0.1));
                 $('#search').keyup(function() {
                     
                     var val = '^(?=.*\\b' + $.trim($(this).val()).split(/\s+/).join('\\b)(?=.*\\b') + ').*$',
