fixed search bar bug

--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
             <div class="nav-wrapper">
                 
                 <div class="input-field">
-                    <input type="text" id="search" type="search" placeholder="Type to search.." required>
+                    <input id="search" type="search" placeholder="Type to search.." required>
                     <label for="search"><i class="material-icons">search</i></label>
+                    <i class="material-icons">close</i>
                 </div>
             </div>
         </nav>
