--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <title>Index</title>
         <script src="js/jquery-1.11.3.min.js"></script>
         <script src="js/materialize.min.js"></script>
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
         <!--Import Google Icon Font-->
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/materialize.min.css">
         <link rel="stylesheet" type="text/css" href="css/custom.css">
+        <meta name="google-signin-client_id" content="757099700822-29tejoue31hcm39hhbqm4p7qgqbkh06d.apps.googleusercontent.com">
     </head>
     <body id="body-background">
         <script type="text/javascript">
@@ -152,10 +154,28 @@
                     }
                 }
             }
+            function onSignIn(googleUser) {
+              var profile = googleUser.getBasicProfile();
+              console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+              console.log('Name: ' + profile.getName());
+              console.log('Image URL: ' + profile.getImageUrl());
+              console.log('Email: ' + profile.getEmail());
+              $('#signin').append(profile.getName());
+            }
+            function signOut() {
+                var auth2 = gapi.auth2.getAuthInstance();
+                auth2.signOut().then(function () {
+                  console.log('User signed out.');
+                });
+            }
         </script>
+        <div id="login-register">
+            <a id="login" class="waves-effect waves-light btn"><i class="material-icons left">input</i>Login</a>
+            <a id="register" class="waves-effect waves-light btn"><i class="material-icons left">input</i>Register</a>
+        </div>
         <nav>
             <div class="nav-wrapper nav-colors">
-                <a class="brand-logo"><img src="images/logo_cpp.png"></a>
+                <a id="cyber-logo" class="brand-logo"><img src="images/cycfed.jpg"></a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -266,7 +286,7 @@
                 <div class="card hacks-img-width z-depth-5 col s6">
                     <h3 class="header">Title Hack 1</h3>
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/office.jpg">
+                        <img class="activator" src="images/cyberfed.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Hack 1<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
@@ -279,7 +299,7 @@
                 <div class="card hacks-img-width z-depth-5 col s6">
                     <h3 class="header">Title Hack 2</h3>
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/office.jpg">
+                        <img class="activator" src="images/cyberfed.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Hack 2<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
@@ -292,7 +312,7 @@
                 <div class="card hacks-img-width z-depth-5 col s6">
                     <h3 class="header">Title Hack 3</h3>
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/office.jpg">
+                        <img class="activator" src="images/cyberfed.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Hack 3<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
@@ -305,7 +325,7 @@
                 <div class="card hacks-img-width z-depth-5 col s6">
                     <h3 class="header">Title Hack 4</h3>
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/office.jpg">
+                        <img class="activator" src="images/cyberfed.png">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Hack 4<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
@@ -317,7 +337,7 @@
                 </div>
             </div>
         </div>
-        <footer id="footer" class="page-footer">
+        <footer id="footer" class="page-footer footer-colors">
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
