re-did colors to match cyberfed colors

--- a/index.html
+++ b/index.html
@@ -283,52 +283,104 @@
         </div>
         <div id="hacks-container">
             <div class="row">
-                <div class="card hacks-img-width z-depth-5 col s6">
+                <div class="card hacks-img-width z-depth-5 col s6 hacks-color">
                     <h3 class="header">Title Hack 1</h3>
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="images/cyberfed.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Hack 1<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
+                        <span class="cyber-yellow card-title activator text-darken-4">Hack 1<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Hack 1<i class="material-icons right">close</i></span>
                         <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                 </div>
-                <div class="card hacks-img-width z-depth-5 col s6">
+                <div class="card hacks-img-width z-depth-5 col s6 hacks-color">
                     <h3 class="header">Title Hack 2</h3>
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="images/cyberfed.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Hack 2<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator text-darken-4">Hack 2<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Hack 2<i class="material-icons right">close</i></span>
+                        <span class="card-title text-darken-4">Hack 2<i class="material-icons right">close</i></span>
                         <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                 </div>
-                <div class="card hacks-img-width z-depth-5 col s6">
+                <div class="card hacks-img-width z-depth-5 col s6 hacks-color">
                     <h3 class="header">Title Hack 3</h3>
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="images/cyberfed.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Hack 3<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator text-darken-4">Hack 3<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Hack 3<i class="material-icons right">close</i></span>
+                        <span class="card-title text-darken-4">Hack 3<i class="material-icons right">close</i></span>
                         <p>Here is some more information about this product that is only revealed once clicked on.</p>
                     </div>
                 </div>
-                <div class="card hacks-img-width z-depth-5 col s6">
+                <div class="card hacks-img-width z-depth-5 col s6 hacks-color">
                     <h3 class="header">Title Hack 4</h3>
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="images/cyberfed.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Hack 4<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator text-darken-4">Hack 4<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Hack 4<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+                <div class="card hacks-img-width z-depth-5 col s6 hacks-color">
+                    <h3 class="header">Title Hack 1</h3>
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/cyberfed.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="cyber-yellow card-title activator text-darken-4">Hack 1<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Hack 1<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+                <div class="card hacks-img-width z-depth-5 col s6 hacks-color">
+                    <h3 class="header">Title Hack 2</h3>
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/cyberfed.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator text-darken-4">Hack 2<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title text-darken-4">Hack 2<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+                <div class="card hacks-img-width z-depth-5 col s6 hacks-color">
+                    <h3 class="header">Title Hack 3</h3>
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/cyberfed.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator text-darken-4">Hack 3<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title text-darken-4">Hack 3<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+                <div class="card hacks-img-width z-depth-5 col s6 hacks-color">
+                    <h3 class="header">Title Hack 4</h3>
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/cyberfed.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator text-darken-4">Hack 4<i style="line-height: 2;" class="material-icons right">more_vert</i></span>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Hack 4<i class="material-icons right">close</i></span>
